--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
@@ -139,6 +139,14 @@
 		}
 	} 
 
+	.page-node-184 {
+		.recommended-tool{
+			span{
+				text-align: center;
+			}
+		}
+	}
+
 
 	.container{
 		padding-left: 15px;
