--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -4806,9 +4806,9 @@ body{
 				padding-left: 10px;
 				padding-right: 10px;
 				.btn-become-partner-download{
-					width: 100%;
+					width: 178px;
 					min-height: 36px;
-					background: url(../images/timeline-button-active.png) repeat-y 93% 40%;
+					background: url(../images/timeline-button-active.png) repeat-y;
 					text-align: left;
 					color: #FFF;
 					padding-top: 7px;
@@ -4817,13 +4817,18 @@ body{
 					border-radius: 3px;
 					text-decoration: none;
 					display: inline-block;
+					position: absolute;
+					left: 8px;
+					bottom: 10px;
 					&:after{
 						content:'';
 						display: block;	
 						background: url(../images/timeline-button-download.png) no-repeat;
 						width: 17px;
 						height: 17px;
-						float: right;
+						right: 11px;
+					    position: absolute;
+					    top: 7px;
 					}
 					&:hover{
 						opacity: 0.8;
@@ -4831,9 +4836,9 @@ body{
 				}
 
 				.btn-become-partner-register{
-					width: 100%;
+					width: 178px;
 					min-height: 36px;
-					background: url(../images/timeline-button-active.png) repeat-y 93% 40%;
+					background: url(../images/timeline-button-active.png) repeat-y;
 					text-align: left;
 					color: #FFF;
 					padding-top: 7px;
@@ -4842,13 +4847,18 @@ body{
 					border-radius: 3px;
 					text-decoration: none;
 					display: inline-block;
+					position: absolute;
+					left: 8px;
+					bottom: 10px;
 					&:after{
 						content:'';
 						display: block;	
-						background: url(../images/active-next.png) no-repeat 85% 75%;
+						background: url(../images/active-next.png) no-repeat;
 						width: 17px;
 						height: 17px;
-						float: right;
+						right: 11px;
+					    position: absolute;
+					    top: 14px;
 					}
 					&:hover{
 						opacity: 0.8;
@@ -4866,8 +4876,8 @@ body{
 			}*/
 			div{
 				.btn-become-partner-register{
-					background: url(../images/timeline-button-no-active.png) repeat-y 93% 40%;					
-					width: 100%;
+					background: url(../images/timeline-button-no-active.png) repeat-y;					
+					width: 179px;
 					min-height: 36px;
 					text-align: left;
 					color: #b3bccc;
@@ -4879,13 +4889,19 @@ body{
 					display: inline-block;
 					pointer-events: none;
 					cursor: pointer;
+					position: absolute;
+					left: 8px;
+					bottom: 10px;
 					&:after{
 						content:'';
 						display: block;	
-						background: url(../images/no-active-next.png) no-repeat 85% 75%;
+						background: url(../images/no-active-next.png) no-repeat;
 						width: 17px;
 						height: 17px;
 						float: right;
+    					right: 11px;
+    					position: absolute;
+    					top: 14px;
 					}
 				}
 			}
