--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
@@ -119,15 +119,18 @@
 				.block-views{
 					.view-view-campaign-materials{
 						.view-content{
-					    display: flex;
-					    flex-wrap: wrap;
-					    > div{
-					    	width: 50%;
-					    	border-bottom: 1px solid #CCC;
-					    	.box-before-title{
-									border: 0;
-					    	}
-					    }
+						    display: flex;
+						    flex-wrap: wrap;
+						    > div{
+						    	width: 100%;
+						    	border-bottom: 1px solid #CCC;
+						    	.box-before-title{
+										border: 0;
+						    	}
+						    }
+						    > div:nth-child(4){
+						    	border-bottom: 0;
+						    }
 						}						
 					}
 				}
@@ -1093,7 +1096,7 @@
 	    		left: 44px;				
 			}
 			> div:nth-child(2) {
-	   			left: 332px;
+	   			left: 38%;
 			}
 			> div:nth-child(3) {
 	    		right: 8px;
@@ -1107,7 +1110,7 @@
 	    	left: 104px;;
 		}
 		> div:nth-child(2) {
-    		left: 320px;
+    		left: 37%;
     	}
     	> div:nth-child(3) {
     		right: 89px;
@@ -1128,7 +1131,7 @@
 	    		left: 44px;				
 			}
 			> div:nth-child(2) {
-	   			left: 258px;
+	   			left: 37%;
 			}
 			> div:nth-child(3) {
 	    		right: 8px;
