--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -1627,7 +1627,7 @@ input[type="checkbox"]:checked + label .my-checkbox:after {
 
 }
 
-#block-menu-block-4{
+#block-menu-block-4, #block-menu-block-6{
 	width: 100%;
 	margin-top: 49px !important;
 }
@@ -8062,7 +8062,7 @@ body.page-tools-and-publications-publications{
 			float: left;
 			width: 100%;
 		}
-	}	
+	}
 }
 
 
@@ -8546,7 +8546,7 @@ body.page-tools-and-publications-practical-tools{
 		float: left;
 		padding: 0.8em;
 		border-radius: 5px;
-		margin-top: 31px;
+		margin-top: 15px;
 		h2{
 			font-size: 1.8rem;
 		    color: #003399;
@@ -8794,5 +8794,14 @@ body.video-page{
 				text-decoration: underline;
 			}
 		}
+	}
+}
+
+
+/* Landing pages content */
+
+#block-menu-block-1, #block-menu-block-7{
+	.nav > li > a{
+		padding: 10px 15px 0 0;
 	}
 }
