--- a/docroot/partner/forms/mvc/view/tpl/entities/ocp_contact.html
+++ b/docroot/partner/forms/mvc/view/tpl/entities/ocp_contact.html
@@ -71,11 +71,11 @@
             {/if}
         </div>
     </div>
-        <!--<div class="float-left">
-            {if !$mf && $partner_type != "current" && !$locked && $HelpMessage != "print"}
+        <div class="float-left">
+            {if !$mf && $partner_type != "current" && !$locked && $HelpMessage != "print" && !$session_id}
             {$attributes.contact_osh_captcha}
             {/if}
-        </div>-->
+        </div>
         <div class="hidden">
         {$attributes.helpMessage}
         {$attributes.contact_osh_mainemailAux}
