--- a/docroot/partner/forms/mvc/view/tpl/entities/ocp_contact.html
+++ b/docroot/partner/forms/mvc/view/tpl/entities/ocp_contact.html
@@ -72,7 +72,7 @@
         </div>
     </div>
         <div class="float-left">
-            {if !$mf && $partner_type != "current" && !$locked && $HelpMessage != "print" && !$session_id}
+            {if !$mf && $partner_type != "current" && !$locked && $HelpMessage != "print"}
             {$attributes.contact_osh_captcha}
             {/if}
         </div>
