--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -25,6 +25,18 @@ header.navbar-default .campaigns-header .navbar-header #block-menu-menu-header-l
 }
 
 
+.rel1{
+	#block-menu-menu-header-login, #block-lang-dropdown-language{
+		display: none;
+	}
+}
+
+.rel1{
+	header.navbar-default .campaigns-header .navbar-header .header_top_bar .region-above-header{
+		padding-top: 1.3em;
+	}	
+}
+
 header.navbar-default .navbar-collapse nav ul.menu li {
 	width: 15%;
 }
