--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -4087,6 +4087,13 @@ body.fop .box-type-partner,
 body.een .box-type-partner {
   width: 100%;
 }
+/* HW20-513 - Display the HWC 18-19 OCP, MP, FOP and EEN without news and events */
+.rel1.ocp .panels-flexible-row-partner_detail-3,
+.rel1.fop .panels-flexible-row-partner_detail-3,
+.rel1.mp .panels-flexible-row-partner_detail-3,
+.rel1.een .panels-flexible-row-partner_detail-3 {
+  display: none;
+}
 /* Become a campaign partner */
 .become-partner-text {
   text-align: center;
