--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-480.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-480.less
@@ -261,12 +261,45 @@
 
 }
 
-@media (max-width: 348px) { 
+@media (max-width: 370px) { 
 	.how-to-apply{ 
 		> div.boxes{ 
 			> div:nth-child(1), > div:nth-child(2), > div:nth-child(3){
-				left: 62px;
+				left: 55px;
 			}
+		}
+	}
+
+	.how-to-apply{
+
+		.container{
+			padding-left: 0;
+			padding-right: 0;
+		}
+
+		.timeline{
+			> div:nth-child(1){
+				left: 35px;
+				&:after{
+					left: -25px;
+				}
+			}
+
+			> div:nth-child(2){
+				left: 35px;
+				&:after{
+					left: -25px;
+				}
+			}
+
+			> div:nth-child(3){
+				left: 35px;
+				&:after{
+					left: -25px;
+				}
+			}
+
+			
 		}
 	}
 
