--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -16,6 +16,7 @@ header.navbar-default .campaigns-header .navbar-header #block-menu-menu-header-l
   border-radius: 5px;
   padding-left: 0.5em;
 }
+/* Styles for only REL1 */
 .rel1 #block-menu-menu-header-login,
 .rel1 #block-lang-dropdown-language {
   display: none;
@@ -23,6 +24,11 @@ header.navbar-default .campaigns-header .navbar-header #block-menu-menu-header-l
 .rel1 header.navbar-default .campaigns-header .navbar-header .header_top_bar .region-above-header {
   padding-top: 1.3em;
 }
+/*HW20-489*/
+.rel1 .related-resources-boxes {
+  justify-content: flex-start;
+}
+/*  END Styles for only REL1  */
 header.navbar-default .navbar-collapse nav ul.menu li {
   width: 15%;
 }
