--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -24,18 +24,27 @@ header.navbar-default .campaigns-header .navbar-header #block-menu-menu-header-l
     padding-left: 0.5em;
 }
 
-
-.rel1{
-	#block-menu-menu-header-login, #block-lang-dropdown-language{
-		display: none;
+/* Styles for only REL1 */
+	.rel1{
+		#block-menu-menu-header-login, #block-lang-dropdown-language{
+			display: none;
+		}
 	}
-}
 
-.rel1{
-	header.navbar-default .campaigns-header .navbar-header .header_top_bar .region-above-header{
-		padding-top: 1.3em;
-	}	
-}
+	.rel1{
+		header.navbar-default .campaigns-header .navbar-header .header_top_bar .region-above-header{
+			padding-top: 1.3em;
+		}	
+	}
+
+	/*HW20-489*/
+	.rel1{
+		.related-resources-boxes{
+			justify-content: flex-start;
+		}
+	}
+
+/*  END Styles for only REL1  */
 
 header.navbar-default .navbar-collapse nav ul.menu li {
 	width: 15%;
