--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -1940,7 +1940,7 @@ aside.col-md-3{
 	display: flex;
   	justify-content: flex-end;
   	border-top: 1px solid black;
-  	margin-top: 2em;
+  	margin-top: .3em;
   	padding-top: 1.3em;
   	padding-bottom: 0;
 	a{
@@ -1967,7 +1967,7 @@ aside.col-md-3{
 	display: flex;
   	justify-content: space-between;
   	border-top: 1px solid black;
-  	margin-top: 2em;
+  	margin-top: .3em;
   	padding-top: 1.3em;
   	padding-bottom: 0;
 	a{
@@ -2130,7 +2130,6 @@ aside.col-md-3{
     padding: 0 0 0 1em;
     border: 0;
     border-radius: 5px;
-   	margin-top: 8px !important;
     width: 100%;
 }
 
@@ -3089,7 +3088,7 @@ span.pages{
 
 body.good-practice-exchange{
 	.footer{
-		margin-top: 0;
+		margin-top: 1em;
 	}
 }
 
@@ -8330,6 +8329,8 @@ body.page-tools-and-publications-practical-tools{
     width: 100%;
     display: flex;
     flex-wrap: wrap;
+    margin-top: 1.5em;
+    margin-bottom: 1em;
     .two-box-column{
     	width: 100%;
     }
