--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
@@ -167,14 +167,14 @@
 		float: right;
 	}
 
-	.main-container h2{
-		margin-left: 15px;
-		margin-right: 15px;
-	}
-
 	.region.region-sidebar-first.well{
 		padding-bottom: 0;
 		margin-bottom: 0;
+	}
+
+	.node-type-article article .field-name-body {
+	    padding-right: 0; 
+	    padding-left: 0; 
 	}
 
 	.node-article .hwc-share-widget{
