--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -7434,7 +7434,13 @@ body.page-tools-and-publications-practical-tools .view-practical-tools .view-con
 }
 /* Popup glossary */
 .lexicon-term {
-  cursor: pointer;
+  border-bottom: 1px dotted #5a8e15 !important;
+  color: #5a8e15 !important;
+  cursor: help;
+}
+.lexicon-term:hover {
+  text-decoration: none;
+  border-bottom: 0;
 }
 .popup {
   position: relative;
