--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -8633,7 +8633,13 @@ body.page-tools-and-publications-practical-tools{
 /* Popup glossary */
 
 .lexicon-term{
-	cursor: pointer;
+	border-bottom: 1px dotted #5a8e15 !important;
+    color: #5a8e15 !important;
+    cursor: help;
+    &:hover{
+    	text-decoration: none;
+    	border-bottom: 0;
+    }
 }
 
 .popup{
