--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
@@ -22,7 +22,14 @@
    				}
 			}
 		}
-		
+	}
+
+	.popup{
+		width: 155px;
+	}
+
+	.region-sidebar-first .contextual-links-region {
+		padding: 0;
 	}
 
 	.start-browsing .start-browsing-box{
