--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -8719,6 +8719,9 @@ body.video-page #block-hwc-article-recommended-resources .field-name-title-field
     width: 155px;
     left: 27%!important;
   }
+  .node-type-priority-area .region-content h2.block-title {
+    background: url(../images/background-priority-mobile.png) no-repeat;
+  }
   .region-sidebar-first .contextual-links-region {
     padding: 0;
   }
