rel2 merge styles

--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
@@ -22,7 +22,19 @@
    				}
 			}
 		}
-		
+	}
+
+	.popup{
+		width: 155px;
+		left: 27%!important;
+	}
+
+	.node-type-priority-area .region-content h2.block-title{
+		background: url(../images/background-priority-mobile.png) no-repeat;
+	}
+
+	.region-sidebar-first .contextual-links-region {
+		padding: 0;
 	}
 
 	.start-browsing .start-browsing-box{
