--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -7791,6 +7791,15 @@ body.front-page{
 /* Publications Slider  */
 body.page-tools-and-publications-publications{
 
+	.page_title{
+		margin-bottom: 0;
+	}
+	.section-introduction{
+		.field-type-text-with-summary{
+			padding-bottom: 0;
+		}
+	} 
+
 	.slider--video--section{
 		clear: both;
 		padding: 0;
