--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -8823,14 +8823,16 @@ body.video-page{
 		}
 	}
 	.became-green-block{
-		background: url(../images/became-green-block.png) no-repeat;
-		background-size: cover;
+		background: #FFF;
 		padding: 1em;
-		color:#FFF;
+		color: #59595A;
 		text-align: left;
 		float: none;
-		margin: 2em auto 2em;
+		margin: 0.5em auto 2em;
 		border-radius: 5px;
+		border: 1px solid #78AD00;
+		max-width: 52%;
+    	text-align: center;
 		a{
 			color: #003399;
 			font-weight: 400;
