--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -6221,10 +6221,17 @@ body.european-week{
     	padding-top: 3em;
     	padding-bottom: 1em;
     	border-radius: 0;
+    	margin-bottom: 1em;
     	.view-frontpage-events{
     		.more-link{
     			background: transparent;
     		}
+    	}
+    }
+
+    #block-hwc-page-share-widget-bottom{
+    	.hwc-share-widget{
+    		margin-bottom: 1em;
     	}
     }
 
