--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
@@ -173,6 +173,12 @@
 		max-width: 90%;
 	}
 
+	#block-hwc-page-share-widget-bottom{
+    	.hwc-share-widget{
+    		padding-right: 1em;
+    	}
+    }
+
 }
 
 
@@ -1027,6 +1033,8 @@
 
 		#block-hwc-european-week-news-events{
 			margin-left: -15px;
+			margin-right: -15px;
+
 		}
 
 		.field-name-body{
