--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
@@ -169,6 +169,16 @@
 		}
 	}
 
+	.page-node-165 .became-green-block{
+		max-width: 90%;
+	}
+
+	#block-hwc-page-share-widget-bottom{
+    	.hwc-share-widget{
+    		padding-right: 1em;
+    	}
+    }
+
 }
 
 
@@ -1023,6 +1033,8 @@
 
 		#block-hwc-european-week-news-events{
 			margin-left: -15px;
+			margin-right: -15px;
+
 		}
 
 		.field-name-body{
