HW20-543 - Tablet: Homepage - News and events not correct layout

--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
@@ -24,6 +24,44 @@
 		}
 	}
 
+	body.front-page{
+		.main-container{
+			#block-hwc-homepage-hwc-homepage-news-events{
+				.view-frontpage-events{
+					background: none;
+				}
+				.before-the-campaign{
+					.content-box-before{
+						.box-before:nth-child(2){
+							.box-before.events{
+								.view-frontpage-events{
+									.view-content{
+										> div{
+										    clear: both;
+										    float: none;
+										    width: 100%;
+										    height: auto;
+										    min-height: 135px;
+										    margin-right: 0;
+										}
+
+										> div:nth-child(3){
+											border-bottom: 1px solid #CCC;
+										}
+
+										> div:last-child{
+											border-bottom: 0;
+										}
+									}	
+								}
+							}
+						}
+					}
+				}
+			}
+		}
+	}
+
 	.popup{
 		width: 155px;
 		left: 27%!important;
