--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -7944,6 +7944,25 @@ body.video-page #block-hwc-article-recommended-resources .field-name-title-field
   .before-the-campaign .content-box-before .box-before .block-views .view-view-campaign-materials .view-content > div:nth-child(4) {
     border-bottom: 0;
   }
+  body.front-page .main-container #block-hwc-homepage-hwc-homepage-news-events .view-frontpage-events {
+    background: url(../images/line-grey.png) no-repeat 47% 32%;
+  }
+  body.front-page .main-container #block-hwc-homepage-hwc-homepage-news-events .before-the-campaign .content-box-before .box-before:nth-child(2) .box-before.events .view-frontpage-events .view-content > div {
+    clear: none;
+    border-bottom: 1px solid #CCC;
+    float: left;
+    width: 46%;
+    padding-top: 1.5em;
+    padding-bottom: 1.5em;
+    padding-left: 2em;
+    padding-right: 1em;
+    height: 166px;
+    margin-right: 15px;
+  }
+  body.front-page .main-container #block-hwc-homepage-hwc-homepage-news-events .before-the-campaign .content-box-before .box-before:nth-child(2) .box-before.events .view-frontpage-events .view-content > div:nth-child(3),
+  body.front-page .main-container #block-hwc-homepage-hwc-homepage-news-events .before-the-campaign .content-box-before .box-before:nth-child(2) .box-before.events .view-frontpage-events .view-content div:last-child {
+    border-bottom: 0;
+  }
   .page-node-184 .recommended-tool span {
     text-align: center;
   }
@@ -8729,6 +8748,23 @@ body.video-page #block-hwc-article-recommended-resources .field-name-title-field
   body.front-page #block-hwc-homepage-hwc-homepage-newsletter-social .social-media a:before {
     filter: brightness(0) invert(1);
     -webkit-filter: brightness(0) invert(1);
+  }
+  body.front-page .main-container #block-hwc-homepage-hwc-homepage-news-events .view-frontpage-events {
+    background: none;
+  }
+  body.front-page .main-container #block-hwc-homepage-hwc-homepage-news-events .before-the-campaign .content-box-before .box-before:nth-child(2) .box-before.events .view-frontpage-events .view-content > div {
+    clear: both;
+    float: none;
+    width: 100%;
+    height: auto;
+    min-height: 135px;
+    margin-right: 0;
+  }
+  body.front-page .main-container #block-hwc-homepage-hwc-homepage-news-events .before-the-campaign .content-box-before .box-before:nth-child(2) .box-before.events .view-frontpage-events .view-content > div:nth-child(3) {
+    border-bottom: 1px solid #CCC;
+  }
+  body.front-page .main-container #block-hwc-homepage-hwc-homepage-news-events .before-the-campaign .content-box-before .box-before:nth-child(2) .box-before.events .view-frontpage-events .view-content > div:last-child {
+    border-bottom: 0;
   }
   .popup {
     width: 155px;
