--- a/docroot/partner/forms/mvc/view/css/style.css
+++ b/docroot/partner/forms/mvc/view/css/style.css
@@ -62,11 +62,12 @@ label + img{}
 }
 
 .print {
-    background      : url(../img/print.png) no-repeat;
-    padding-left    : 2vw !important;
-    padding-bottom  : 0.4vw !important;
-    background-size : 2em;
+    background: url(../img/print.png) no-repeat 0px 7px;
+    padding-left: 2vw !important;
+    padding-bottom: 0.4vw !important;
+    background-size: 2em;
     margin: 1vw;
+    padding-top: 10px;
 }
 
 .export-pdf {
@@ -830,7 +831,7 @@ select.company_osh_selectsocialnetworks{
 }
 
 input#socialNetworkTextBox{
-    width: 130%;
+    width: 100%;
     margin-top: 4px;
     /*vertical-align: middle;*/
 }
