--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -8812,6 +8812,9 @@ body.video-page{
 
 		}
 	}
+	.field-name-body .field-item ul{
+		margin-left: 17em;
+	}
 }
 
 
@@ -8857,4 +8860,8 @@ body.video-page{
 	.nav > li > a{
 		padding: 10px 15px 0 0;
 	}
+}
+
+.pane-hwc-good-practice-exchange-gpepbacklink{
+	clear: both;
 }
