HW20-455 - Homepage 7 Please correct grammatical errors in the newsletter and social media banner

--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -6628,7 +6628,8 @@ body.front-page .main-container .box-before.social-media h2:before {
   background: url(../images/ico-social-media.png) 1px 5px no-repeat;
 }
 body.front-page .main-container .box-before.social-media p {
-  width: 59%;
+  width: 100%;
+  padding-right: 8em;
 }
 body.front-page .main-container .box-before.social-media a.see-more-button-20 {
   background: url(../images/ico-plus-20.png) no-repeat 98.5% 3px #0030a0;
