--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -7643,7 +7643,8 @@ body.front-page{
 			}
 
 			p{
-				width: 59%;
+				width: 100%;
+    			padding-right: 8em;
 			}
 
 			a.see-more-button-20{
