--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
@@ -62,6 +62,16 @@
 		}
 	}
 
+	.node-type-priority-area .region-content{
+		#block-hwc-priority-areas{
+			.node-pa-highlights, .node-news {
+				.field.field-name-field-image{
+				    min-height: auto;
+				}
+			}
+		}
+	}
+
 	.popup{
 		width: 155px;
 		left: 27%!important;
