--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -8069,13 +8069,29 @@ body.page-tools-and-publications-publications{
 					width: auto;
 				    margin-right: 0;
 				    float: left;
-				    min-height: 90px;
+				    min-height: 132px;
 				    img {
 			    		margin-top: 0.3em;
 			    		margin-bottom: 0em;
 			    		margin-right: 1em;
 					}
 				}
+
+				.field-name-body{
+					ul {
+					    list-style: inside;
+					    padding: 0;
+					    margin-bottom: 0;
+					    text-align: left;
+					    li{
+					    	padding-top: 0;
+						    padding-bottom: 0;
+						    background: none;
+					   	}
+					}
+
+				}
+
 				a.more-link{
 					justify-content: left;
 					font-size: 1.2rem;
